# Draw-This

./: LICENSE  README.md  pyproject.toml  tkinter_gui.spec
.github/workflows/: ci.yml
assets/: main.qss
docs/: README.md
gui/: tkinter_gui.py
launcher/: feh_backend.py
listing/: file_listing.py
src/drawthis/: __init__.py  main.py
src/drawthis/app/: config.py  constants.py  controller.py  signals.py
src/drawthis/core/: errors.py  types.py
src/drawthis/core/events/: bus.py
src/drawthis/core/protocols/: protocols.py
src/drawthis/gui/: __init__.py  coordinator.py  feh_backend.py  gui_controller.py  model.py  opengl_backend.py  pyside_gui.py  state.py  tkinter_gui.py  viewmodel.py
src/drawthis/gui/shaders/: basic.frag  shader_parser.py
src/drawthis/gui/tkinter (LEGACY)/: tkinter_viewmodel.py
src/drawthis/logic/: __init__.py  file_listing.py  protocols.py
src/drawthis/logic/core/: dataclasses.py  protocols.py  types.py
src/drawthis/logic/database/: backends.py  manager.py
src/drawthis/logic/filesystem/: crawler.py
src/drawthis/perf/: crawler_database_int_profile.ipynb
src/drawthis/persistence/resources/: json_persistence.py
src/drawthis/persistence/session/: json_persistence.py  sqlite3_backend.py
src/drawthis/persistence/settings/: json_persistence.py
src/drawthis/render/: __init__.py  feh_backend.py  opengl_backend.py  slideshow_manager.py
src/drawthis/render/shaders/: basic.frag
src/drawthis/services/session/: crawler.py  db_service.py  slideshow_service.py
src/drawthis/services/settings/: GODLESS_MODEL_service.py  timer_service.py  user_preferences_service.py
src/drawthis/tests/: test_file_listing.py  test_render_textures.py
src/drawthis/tests/integration/: test_render_textures.py  test_viewmodel_model.py
src/drawthis/tests/unit/: test_file_listing.py  test_gui_dataclasses.py  test_logic_database_sqlite3.py  test_logic_protocols.py
src/drawthis/utils/: config.py  exceptions.py  logger.py  shader_parser.py  subprocess_queue.py
src/gui/: model.py  tkinter_gui.py
src/iteradraw/: bootstrap.py  container.py  main.py
src/iteradraw/application/commands/: folder_commands.py  timer_commands.py
src/iteradraw/application/handlers/: folder_handlers.py  interfaces.py  timer_handlers.py
src/iteradraw/domain/: exceptions.py
src/iteradraw/infrastructure/: __init__.py  event_bus.py  services.py
src/iteradraw/shared/: logger_legacy.py  types.py
src/launcher/: feh_backend.py  opengl_backend.py
src/listing/: file_listing.py
src/perf/: crawler_database_int_profile.ipynb
src/settings/: settings_manager.py
src/settings_manager/: settings_manager.py
src/tests/integration/: test_render_textures.py  test_viewmodel_model.py
stories/: folder_group_view.py  main_tab_view.py  mocks.py
tests/unit/handlers/: test_folder_handlers.py  test_image_path_database_handler.py
utils/: filedialogs.py
(+41 files in other folders)
