[project]
name = "draw-this"
version = "0.1.0"
description = "Compact and self-contained image slideshow app meant for art/gesture practice sessions."
authors = [
    {name = "Meidarow",email = "60526952+Meidarow@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyinstaller (>=6.15.0,<7.0.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
    "pyopengl-accelerate (>=3.1.10,<4.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "moderngl-window (>=3.1.1,<4.0.0)"
]
packages = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry-core = "^2.1.3"

