[project]
name = "drawthis"
version = "2.0.0"
description = "Compact and self-contained image slideshow app meant for art/gesture practice sessions."
authors = [
    {name = "Meidarow",email = "60526952+Meidarow@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "moderngl-window (>=3.1.1,<4.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "imageio[pyav] (>=2.37.0,<3.0.0)",
    "glfw (>=2.10.0,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pillow-simd (>=9.5.0.post2,<10.0.0)",
]
packages = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 79
target-version = ['py311']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry-core = "^2.1.3"
pre-commit = "^4.3.0"
coverage = "^7.10.7"
pytest-cov = "^7.0.0"
